# bipolar

./: .bazelrc  .clang-format  .clang-tidy  .gitignore  BUILD  Doxyfile  LICENSE  README.md  WORKSPACE
.circleci/: config.yml
.github/workflows/: ci.yml
bazel/: BUILD.bazel  dependencies.bzl
benchmarks/: BUILD
bipolar/: BUILD.bazel  core.hpp  option.hpp  result.hpp  void.hpp
bipolar/async/: BUILD.bazel  pipe.hpp  properties.hpp
bipolar/async/receiver/: callback.hpp  primitive.hpp  receiver.hpp  traits.hpp
bipolar/async/tests/: pipe_test.cpp  properties_test.cpp  receiver_test.cpp
bipolar/copts/: configure_copts.bzl  copts.bzl
bipolar/core/: BUILD.bazel  README.md  assert.hpp  assume.hpp  byteorder.hpp  function.hpp  function_ref.hpp  hash.hpp  likely.hpp  logger.cpp  logger.hpp  movable.hpp  option.hpp  overload.hpp  result.hpp  scope_guard.hpp  thread_safety.hpp  traits.hpp  try.hpp  void.hpp
bipolar/core/benchmarks/: function_benchmark.cpp  function_ref_benchmark.cpp  option_benchmark.cpp
bipolar/core/internal/: enable_special_members.hpp
bipolar/core/tests/: byteorder_test.cpp  function_ref_test.cpp  function_test.cpp  logger_test.cpp  option_test.cpp  overload_test.cpp  result_test.cpp  scope_guard_test.cpp  traits_test.cpp  try_test.cpp
bipolar/executors/: BUILD.bazel  inline_executor.hpp
bipolar/executors/tests/: inline_executor_test.cpp
bipolar/futures/: BUILD.bazel  README.md  async_result.hpp  context.hpp  executor.hpp  future_inl.hpp  pending_task.hpp  promise.hpp  properties.hpp  scheduler.cpp  scheduler.hpp  single_threaded_executor.cpp  single_threaded_executor.hpp  suspended_task.hpp  traits.hpp
bipolar/futures/examples/: future.cpp  promise.cpp
bipolar/futures/internal/: adaptor.hpp
bipolar/futures/tests/: async_result_test.cpp  future_test.cpp  pending_task_test.cpp  promise_test.cpp  properties_test.cpp  scheduler_test.cpp  single_threaded_executor_test.cpp  suspended_task_test.cpp
bipolar/io/: BUILD.bazel  README.md  io_uring.cpp  io_uring.hpp  reactor.hpp
bipolar/io/tests/: io_uring_cq_full_test.cpp  io_uring_eagain_test.cpp  io_uring_fsync_test.cpp  io_uring_link_test.cpp  io_uring_nop_test.cpp  io_uring_poll_cancel_test.cpp  io_uring_poll_test.cpp  io_uring_sq_full_test.cpp  io_uring_submit_wait_test.cpp  sq_full_test.cpp
bipolar/net/: BUILD.bazel  README.md  epoll.cpp  epoll.hpp  ip_address.cpp  ip_address.hpp  socket_address.cpp  socket_address.hpp  tcp.cpp  tcp.hpp  udp.cpp  udp.hpp
bipolar/net/internal/: native_to_socket_address.hpp
bipolar/net/tests/: epoll_test.cpp  ip_address_test.cpp  socket_address_test.cpp  tcp_test.cpp  udp_test.cpp
bipolar/sync/: BUILD.bazel  README.md  barrier.hpp  cacheline.hpp  spinlock.hpp  spinlock_pool.hpp
bipolar/sync/tests/: barrier_test.cpp  spinlock_test.cpp
examples/: BUILD.bazel  echo.cpp
tests/: BUILD  LICENSE  option_test.cpp  result_test.cpp  traits_test.cpp
tools/: README.md  bazel.rc
tools/dynamic_analysis/: BUILD.bazel  asan.sh  bazel.rc  kcov.sh  lsan.sh  tsan.sh  ubsan.sh
