load(
    "//bipolar:copts/configure_copts.bzl",
    "BIPOLAR_DEFAULT_COPTS",
    "BIPOLAR_DEFAULT_LINKOPTS",
    "BIPOLAR_TEST_COPTS",
)

package(default_visibility = ["//visibility:public"])

licenses(["notice"])

cc_binary(
    name = "echo",
    srcs = [
        "echo.cpp",
    ],
    copts = BIPOLAR_DEFAULT_COPTS,
    linkopts = BIPOLAR_DEFAULT_LINKOPTS,
    deps = [
        "//bipolar/io",
    ],
)
