load(
    '//bipolar:copts/configure_copts.bzl',
    'BIPOLAR_DEFAULT_COPTS',
    'BIPOLAR_DEFAULT_LINKOPTS',
    'BIPOLAR_TEST_COPTS',
)

package(default_visibility = ['//visibility:public'])

licenses(['notice'])

cc_library(
    name = 'async',
    hdrs = [
        'pipe.hpp',
        'properties.hpp',
    ],
    srcs = [
    ],
    copts = BIPOLAR_DEFAULT_COPTS,
    linkopts = BIPOLAR_DEFAULT_LINKOPTS,
    deps = [
        '@boost//:mp11'
    ],
)

cc_test(
    name = 'async_test',
    srcs = [
        'tests/properties_test.cpp',
        'tests/pipe_test.cpp',
    ],
    copts = BIPOLAR_TEST_COPTS,
    linkopts = BIPOLAR_DEFAULT_LINKOPTS,
    deps = [
        ':async',
        '@gtest//:gtest_main',
    ],
)

cc_test(
    name = 'error_test',
    srcs = [
        'tests/errro_test.cpp',
    ],
    copts = BIPOLAR_TEST_COPTS,
    linkopts = BIPOLAR_DEFAULT_LINKOPTS,
    deps = [
        ':futures',
        '@gtest//:gtest_main',
    ],
)
