load(
    '//bipolar:copts/configure_copts.bzl',
    'BIPOLAR_DEFAULT_COPTS',
    'BIPOLAR_DEFAULT_LINKOPTS',
    'BIPOLAR_TEST_COPTS',
)

package(default_visibility = ['//visibility:public'])

licenses(['notice'])

cc_library(
    name = 'core',
    srcs = [
    ],
    hdrs = [
        'void.hpp',
        'traits.hpp',
        'option.hpp',
        'result.hpp',
        'overload.hpp',
        'byteorder.hpp',
        'try.hpp',
        'function_ref.hpp',
    ],
    copts = BIPOLAR_DEFAULT_COPTS,
    linkopts = BIPOLAR_DEFAULT_LINKOPTS,
)

cc_test(
    name = 'core_test',
    srcs = [
        'tests/option_test.cpp',
        'tests/result_test.cpp',
        'tests/traits_test.cpp',
        'tests/overload_test.cpp',
        'tests/byteorder_test.cpp',
        'tests/try_test.cpp',
        'tests/function_ref_test.cpp',
    ],
    copts = BIPOLAR_TEST_COPTS,
    linkopts = BIPOLAR_DEFAULT_LINKOPTS,
    deps = [
        ':core',
        '@gtest//:gtest_main',
    ],
)

cc_test(
    name = 'option_benchmark',
    srcs = [
        'benchmarks/option_benchmark.cpp',
    ],
    copts = BIPOLAR_TEST_COPTS,
    linkopts = BIPOLAR_DEFAULT_LINKOPTS,
    tags = ['benchmark'],
    deps = [
        ':core',
        '@benchmark//:benchmark_main',
    ]
)
