load(
    "//bipolar:copts/configure_copts.bzl",
    "BIPOLAR_DEFAULT_COPTS",
    "BIPOLAR_DEFAULT_LINKOPTS",
    "BIPOLAR_TEST_COPTS",
)

package(default_visibility = ["//visibility:public"])

licenses(["notice"])

cc_library(
    name = "core",
    srcs = [
    ],
    hdrs = [
        "assume.hpp",
        "byteorder.hpp",
        "function.hpp",
        "function_ref.hpp",
        "likely.hpp",
        "option.hpp",
        "overload.hpp",
        "result.hpp",
        "traits.hpp",
        "try.hpp",
        "void.hpp",
    ],
    copts = BIPOLAR_DEFAULT_COPTS,
    linkopts = BIPOLAR_DEFAULT_LINKOPTS,
)

cc_test(
    name = "core_test",
    srcs = [
        "tests/byteorder_test.cpp",
        "tests/function_ref_test.cpp",
        "tests/function_test.cpp",
        "tests/option_test.cpp",
        "tests/overload_test.cpp",
        "tests/result_test.cpp",
        "tests/traits_test.cpp",
        "tests/try_test.cpp",
    ],
    copts = BIPOLAR_TEST_COPTS,
    linkopts = BIPOLAR_DEFAULT_LINKOPTS,
    deps = [
        ":core",
        "@gtest//:gtest_main",
    ],
)

cc_test(
    name = "option_benchmark",
    srcs = [
        "benchmarks/option_benchmark.cpp",
    ],
    copts = BIPOLAR_TEST_COPTS,
    linkopts = BIPOLAR_DEFAULT_LINKOPTS,
    tags = ["benchmark"],
    deps = [
        ":core",
        "@benchmark//:benchmark_main",
    ],
)

cc_test(
    name = "function_ref_benchmark",
    srcs = [
        "benchmarks/function_ref_benchmark.cpp",
    ],
    copts = BIPOLAR_TEST_COPTS,
    linkopts = BIPOLAR_DEFAULT_LINKOPTS,
    tags = ["benchmark"],
    deps = [
        ":core",
        "@benchmark//:benchmark_main",
    ],
)

cc_test(
    name = "function_benchmark",
    srcs = [
        "benchmarks/function_benchmark.cpp",
    ],
    copts = BIPOLAR_TEST_COPTS,
    linkopts = BIPOLAR_DEFAULT_LINKOPTS,
    tags = ["benchmark"],
    deps = [
        ":core",
        "@benchmark//:benchmark_main",
    ],
)
