load(
    "//bipolar:copts/configure_copts.bzl",
    "BIPOLAR_DEFAULT_COPTS",
    "BIPOLAR_DEFAULT_LINKOPTS",
    "BIPOLAR_TEST_COPTS",
)

package(default_visibility = ["//visibility:public"])

licenses(["notice"])

cc_library(
    name = "core",
    srcs = [
        "logger.cpp",
    ],
    hdrs = [
        "assert.hpp",
        "assume.hpp",
        "byteorder.hpp",
        "function.hpp",
        "function_ref.hpp",
        "hash.hpp",
        "internal/enable_special_members.hpp",
        "likely.hpp",
        "logger.hpp",
        "movable.hpp",
        "option.hpp",
        "overload.hpp",
        "result.hpp",
        "scope_guard.hpp",
        "thread_safety.hpp",
        "traits.hpp",
        "void.hpp",
    ],
    copts = BIPOLAR_DEFAULT_COPTS,
    linkopts = BIPOLAR_DEFAULT_LINKOPTS,
    deps = [
        "@spdlog",
    ],
)

cc_test(
    name = "core_test",
    srcs = [
        "tests/byteorder_test.cpp",
        "tests/function_ref_test.cpp",
        "tests/function_test.cpp",
        "tests/logger_test.cpp",
        "tests/option_test.cpp",
        "tests/overload_test.cpp",
        "tests/result_test.cpp",
        "tests/scope_guard_test.cpp",
        "tests/traits_test.cpp",
    ],
    copts = BIPOLAR_TEST_COPTS,
    linkopts = BIPOLAR_DEFAULT_LINKOPTS,
    deps = [
        ":core",
        "@gtest//:gtest_main",
    ],
)

cc_test(
    name = "option_benchmark",
    srcs = [
        "benchmarks/option_benchmark.cpp",
    ],
    copts = BIPOLAR_TEST_COPTS,
    linkopts = BIPOLAR_DEFAULT_LINKOPTS,
    tags = ["benchmark"],
    deps = [
        ":core",
        "@benchmark//:benchmark_main",
    ],
)

cc_test(
    name = "function_ref_benchmark",
    srcs = [
        "benchmarks/function_ref_benchmark.cpp",
    ],
    copts = BIPOLAR_TEST_COPTS,
    linkopts = BIPOLAR_DEFAULT_LINKOPTS,
    tags = ["benchmark"],
    deps = [
        ":core",
        "@benchmark//:benchmark_main",
    ],
)

cc_test(
    name = "function_benchmark",
    srcs = [
        "benchmarks/function_benchmark.cpp",
    ],
    copts = BIPOLAR_TEST_COPTS,
    linkopts = BIPOLAR_DEFAULT_LINKOPTS,
    tags = ["benchmark"],
    deps = [
        ":core",
        "@benchmark//:benchmark_main",
    ],
)
