load(
    "//bipolar:copts/configure_copts.bzl",
    "BIPOLAR_DEFAULT_COPTS",
    "BIPOLAR_DEFAULT_LINKOPTS",
    "BIPOLAR_TEST_COPTS",
)

package(default_visibility = ["//visibility:public"])

licenses(["notice"])

cc_library(
    name = "futures",
    srcs = [
        "scheduler.cpp",
    ],
    hdrs = [
        "async_result.hpp",
        "context.hpp",
        "executor.hpp",
        "future_inl.hpp",
        "internal/adaptor.hpp",
        "pending_task.hpp",
        "promise.hpp",
        "suspended_task.hpp",
        "traits.hpp",
        "scheduler.hpp"
    ],
    copts = BIPOLAR_DEFAULT_COPTS,
    linkopts = BIPOLAR_DEFAULT_LINKOPTS,
    deps = [
        "//bipolar/core",
        "@boost//:callable_traits",
        "@boost//:noncopyable",
    ],
)

cc_test(
    name = "futures_test",
    srcs = [
        "tests/async_result_test.cpp",
        "tests/promise_test.cpp",
        "tests/suspended_task_test.cpp",
    ],
    copts = BIPOLAR_DEFAULT_COPTS,
    linkopts = BIPOLAR_DEFAULT_LINKOPTS,
    deps = [
        ":futures",
        "@gtest//:gtest_main",
    ],
)
