load(
    '//bipolar:copts/configure_copts.bzl',
    'BIPOLAR_DEFAULT_COPTS',
    'BIPOLAR_DEFAULT_LINKOPTS',
    'BIPOLAR_TEST_COPTS',
)

package(default_visibility = ['//visibility:public'])

licenses(['notice'])

cc_library(
    name = 'io',
    srcs = [
        'io_uring.cpp',
        'reactor.cpp',
    ],
    hdrs = [
        'io_uring.hpp',
        'reactor.hpp',
    ],
    copts = BIPOLAR_DEFAULT_COPTS,
    linkopts = BIPOLAR_DEFAULT_LINKOPTS,
    deps = [
        '//bipolar/core:core',
        '@liburing//:liburing',
        '@boost//:noncopyable',
    ],
)

cc_test(
    name = 'io_uring_test',
    srcs = [
        'tests/sq_full_test.cpp',
        #'tests/poll.cpp',
    ],
    copts = BIPOLAR_TEST_COPTS,
    linkopts = BIPOLAR_DEFAULT_LINKOPTS,
    deps = [
        ':io',
        '@gtest//:gtest_main',
    ],
)
