load(
    "//bipolar:copts/configure_copts.bzl",
    "BIPOLAR_DEFAULT_COPTS",
    "BIPOLAR_DEFAULT_LINKOPTS",
    "BIPOLAR_TEST_COPTS",
)

package(default_visibility = ["//visibility:public"])

licenses(["notice"])

cc_library(
    name = "net",
    srcs = [
        "ip_address.cpp",
        "socket_address.cpp",
        "udp.cpp",
    ],
    hdrs = [
        "internal/native_to_socket_address.hpp",
        "ip_address.hpp",
        "socket_address.hpp",
        "udp.hpp",
    ],
    copts = BIPOLAR_DEFAULT_COPTS,
    linkopts = BIPOLAR_DEFAULT_LINKOPTS,
    deps = [
        "//bipolar/core",
    ],
)

cc_test(
    name = "net_test",
    srcs = [
        "tests/ip_address_test.cpp",
        "tests/socket_address_test.cpp",
        "tests/udp_test.cpp",
    ],
    copts = BIPOLAR_TEST_COPTS,
    linkopts = BIPOLAR_DEFAULT_LINKOPTS,
    deps = [
        ":net",
        "@gtest//:gtest_main",
    ],
)
