load(
    "//bipolar:copts/configure_copts.bzl",
    "BIPOLAR_DEFAULT_COPTS",
    "BIPOLAR_DEFAULT_LINKOPTS",
    "BIPOLAR_TEST_COPTS",
)

package(default_visibility = ["//visibility:public"])

licenses(["notice"])

cc_library(
    name = "sync",
    srcs = [
    ],
    hdrs = [
        "barrier.hpp",
        "spinlock.hpp",
        "spinlock_pool.hpp",
    ],
    copts = BIPOLAR_DEFAULT_COPTS,
    linkopts = BIPOLAR_DEFAULT_LINKOPTS,
    deps = [
        "//bipolar/core",
        "@boost//:noncopyable",
    ],
)

cc_test(
    name = "sync_test",
    srcs = [
        "tests/barrier_test.cpp",
        "tests/spinlock_test.cpp",
    ],
    copts = BIPOLAR_TEST_COPTS,
    linkopts = BIPOLAR_DEFAULT_LINKOPTS,
    deps = [
        ":sync",
        "@gtest//:gtest_main",
    ],
)
